# bayesian-safety-traits

./: .gitignore  LICENSE  README.md  pyproject.toml
bayesian_safety_traits/: data.py  metrics.py
bayesian_safety_traits/annotation/: 02_refusal_classifier.py
bayesian_safety_traits/models/: __init__.py  base.py  baselines.py  bayesian.py
notebooks/: qwen25_family_ablations.ipynb
scripts/: train_eval.py
tools/: generate_synthetic.py
