[project]
name = "bayesian-safety-traits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=1.2.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymc>=6.1.0",
    "scikit-learn>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
